--- a/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
@@ -127,6 +127,7 @@ textarea {
   @include respond-to(smartphone) {
 	padding: 0 10px;
   }
+  @include pie-clearfix;
 }
 
 // Unordered and Ordered - <ol> & <ul>
