Updating css to give footer more breathing room.

--- a/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
@@ -130,6 +130,12 @@ textarea {
   @include pie-clearfix;
 }
 
+.primary-content {
+	/* Clear room for the footer */
+	margin-bottom: 200px;
+  @include pie-clearfix;
+}
+
 // Unordered and Ordered - <ol> & <ul>
 // ------------------------------------------------------------------
 
