--- a/htdocs/themes/StateDecoded2013/static/scss/dependencies/variables/_colors.css.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/dependencies/variables/_colors.css.scss
@@ -102,7 +102,7 @@ $negative-red: #c83434 !default;
 // QTip Specific Colors
 // ------------------------------------------------------------------
 $qtip-border-color: $gray-dark;
-$qtip-bkgnd-color: $gray-light;
+$qtip-bkgnd-color: $gray-lightest;
 $qtip-color: inherit;
 $qtip-titlebar-bkgnd-color: #ffef93;
 $qtip-icon-border-color: #ccc;
