Move CSS out of search page, into sitewide CSS
Per #158.

--- a/htdocs/themes/StateDecoded2013/static/scss/areas/_page-search-results.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/areas/_page-search-results.scss
@@ -30,4 +30,21 @@
     }
 
   }
+  
+  ul#paging {
+    margin: 0 auto;
+    text-align: center;
+  }
+    li {
+      display: inline;
+      list-style-type: none;
+    }
+    li + li {
+	  margin-left: 1em;
+    }
+  form input[type=text] {
+    width: 70%;
+    margin-right: 5%;
+  }
+  
 }
