--- a/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
@@ -123,17 +123,18 @@ textarea {
 }
 
 #main_content {
+  overflow:hidden;
   padding: 20px 0;
+
   @include respond-to(smartphone) {
 	padding: 0 10px;
   }
-  @include pie-clearfix;
 }
 
 .primary-content {
 	/* Clear room for the footer */
-	margin-bottom: 200px;
-  @include pie-clearfix;
+	margin-bottom: 50px;
+  overflow: hidden;
 }
 
 // Unordered and Ordered - <ol> & <ul>
