Moving autocomplete css to scss pages, switching colors to color variables.

--- a/htdocs/themes/StateDecoded2013/static/scss/application.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/application.scss
@@ -63,6 +63,7 @@
 
 /* Jquery Plugins */
 @import "vendor/jquery.qtip";
+@import "vendor/jquery.autocomplete";
 
 // Areas
 @import "areas/_header.scss";
