Reducing extra whitespace between page and breadcrumbs

--- a/htdocs/themes/StateDecoded2013/static/scss/areas/_breadcrumbs.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/areas/_breadcrumbs.scss
@@ -55,7 +55,7 @@ nav.prevnext {
 
 .breadcrumbs ul {
   list-style: none;
-  margin: 0 0 1em;
+  margin: 0;
   overflow: hidden;
   font: 18px Helvetica, Arial, Sans-Serif;
   @include clearfix;
