Put a marigin around the social buttons
Closes #389.

--- a/htdocs/themes/StateDecoded2013/static/scss/areas/_page-law-show.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/areas/_page-law-show.scss
@@ -352,6 +352,10 @@
       } // &#legal_self_help
 
       &#history {}
+      
+      &#social {
+      	padding: 1em;
+      }
 
       &#amendment_attempts {
         h2 {
