--- a/htdocs/themes/StateDecoded2013/static/scss/areas/_page-homepage-feature-content.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/areas/_page-homepage-feature-content.scss
@@ -1,7 +1,8 @@
   section.feature-content {
     float: left;
+    margin-left: 2%;
     margin-right: 1%;
-    width: 49%;
+    width: 47%;
 
     p {
       font-size: 18px;
