--- a/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/base/_default.scss
@@ -121,7 +121,7 @@ textarea {
 
 #main_content {
   overflow:hidden;
-  padding: 20px 0;
+  padding: 20px 20px;
 
   @include respond-to(smartphone) {
 	padding: 0 10px;
