Adding dataTables scrolling to theme. Also fixing up a few debug messages, data errors, etc from the SF fork.

--- a/htdocs/themes/StateDecoded2013/static/scss/areas/_page-law-show.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/areas/_page-law-show.scss
@@ -525,7 +525,7 @@ $border-radius-base: 6px;
   }
   // pulling this in mainly for less shorthand
   &.nav-justified {
-    @extend .nav-justified;
-    @extend .nav-tabs-justified;
+    @extend .nav-justified !optional;
+    @extend .nav-tabs-justified !optional;
   }
 }
